--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>개인정보 처리방침 - 황새 신입 출근 대작전</title>
+    <title>개인정보 처리방침 - 허약 신입 출근 대작전</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.min.css">
     <style>
         * {
@@ -88,11 +88,11 @@
 <body>
     <div class="container">
         <h1>개인정보 처리방침</h1>
-        <p class="subtitle">황새 신입 출근 대작전 (The Great Commute)</p>
+        <p class="subtitle">허약 신입 출근 대작전 (The Great Commute)</p>
 
         <div class="section">
             <h2>1. 개요</h2>
-            <p>황새 신입 출근 대작전(이하 "게임")은 개인정보를 수집하지 않는 오프라인 캐주얼 게임입니다. 본 방침은 게임 이용 시 데이터 처리 방식에 대해 설명합니다.</p>
+            <p>허약 신입 출근 대작전(이하 "게임")은 개인정보를 수집하지 않는 오프라인 캐주얼 게임입니다. 본 방침은 게임 이용 시 데이터 처리 방식에 대해 설명합니다.</p>
         </div>
 
         <div class="section">
